--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container main">
         <div class="container">
-            <img src="../New folder/image/piggyvest logo.svg" alt="piggyvest" id="logo">
+            <img src="../New folder/image/piggyvest-seeklogo.png" alt="piggyvest" id="logo">
             <a href="">Save</a>
             <a href="">Invest</a>
             <a href="">Stories</a>
